// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rubric Container snapshot is grading 1`] = `
<React.Fragment>
  <Card
    className="grading-rubric-card"
  >
    <Card.Body
      className="grading-rubric-body"
    >
      <h3>
        Rubric
      </h3>
      <hr
        className="m-2.5"
      />
      // get this.criteria()
      <hr />
      <RubricFeedback />
    </Card.Body>
    <div
      className="grading-rubric-footer"
    >
      <StatefulButton
        disabledStates={
          Array [
            "pending",
            "complete",
          ]
        }
        labels={
          Object {
            "complete": "Grade Submitted",
            "default": "Submit grade",
            "pending": "Submitting grade",
          }
        }
        onClick={[MockFunction this.submitGradeHandler]}
        state="default"
      />
    </div>
  </Card>
  <DemoAlert
    isOpen={false}
    onClose={[MockFunction this.hideDemoAlert]}
  />
</React.Fragment>
`;

exports[`Rubric Container snapshot is grading, lock is pending 1`] = `
<React.Fragment>
  <Card
    className="grading-rubric-card"
  >
    <Card.Body
      className="grading-rubric-body"
    >
      <h3>
        Rubric
      </h3>
      <hr
        className="m-2.5"
      />
      // get this.criteria()
      <hr />
      <RubricFeedback />
    </Card.Body>
    <div
      className="grading-rubric-footer"
    >
      <StatefulButton
        disabledStates={
          Array [
            "pending",
            "complete",
          ]
        }
        labels={
          Object {
            "complete": "Grade Submitted",
            "default": "Submit grade",
            "pending": "Submitting grade",
          }
        }
        onClick={[MockFunction this.submitGradeHandler]}
        state="pending"
      />
    </div>
  </Card>
  <DemoAlert
    isOpen={false}
    onClose={[MockFunction this.hideDemoAlert]}
  />
</React.Fragment>
`;

exports[`Rubric Container snapshot is grading, submit pending 1`] = `
<React.Fragment>
  <Card
    className="grading-rubric-card"
  >
    <Card.Body
      className="grading-rubric-body"
    >
      <h3>
        Rubric
      </h3>
      <hr
        className="m-2.5"
      />
      // get this.criteria()
      <hr />
      <RubricFeedback />
    </Card.Body>
    <div
      className="grading-rubric-footer"
    >
      <StatefulButton
        disabledStates={
          Array [
            "pending",
            "complete",
          ]
        }
        labels={
          Object {
            "complete": "Grade Submitted",
            "default": "Submit grade",
            "pending": "Submitting grade",
          }
        }
        onClick={[MockFunction this.submitGradeHandler]}
        state="pending"
      />
    </div>
  </Card>
  <DemoAlert
    isOpen={false}
    onClose={[MockFunction this.hideDemoAlert]}
  />
</React.Fragment>
`;

exports[`Rubric Container snapshot is not grading 1`] = `
<React.Fragment>
  <Card
    className="grading-rubric-card"
  >
    <Card.Body
      className="grading-rubric-body"
    >
      <h3>
        Rubric
      </h3>
      <hr
        className="m-2.5"
      />
      // get this.criteria()
      <hr />
      <RubricFeedback />
    </Card.Body>
  </Card>
  <DemoAlert
    isOpen={false}
    onClose={[MockFunction this.hideDemoAlert]}
  />
</React.Fragment>
`;

exports[`Rubric Container snapshot submit completed 1`] = `
<React.Fragment>
  <Card
    className="grading-rubric-card"
  >
    <Card.Body
      className="grading-rubric-body"
    >
      <h3>
        Rubric
      </h3>
      <hr
        className="m-2.5"
      />
      // get this.criteria()
      <hr />
      <RubricFeedback />
    </Card.Body>
    <div
      className="grading-rubric-footer"
    >
      <StatefulButton
        disabledStates={
          Array [
            "pending",
            "complete",
          ]
        }
        labels={
          Object {
            "complete": "Grade Submitted",
            "default": "Submit grade",
            "pending": "Submitting grade",
          }
        }
        onClick={[MockFunction this.submitGradeHandler]}
        state="complete"
      />
    </div>
  </Card>
  <DemoAlert
    isOpen={false}
    onClose={[MockFunction this.hideDemoAlert]}
  />
</React.Fragment>
`;
